<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderManagementActivity">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="1"
        android:text="@string/str_order_report"
        android:textAlignment="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_weight="1"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtFromDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_from_date" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/2026" />

            <ImageView
                android:id="@+id/imgFromDate"
                android:layout_width="47dp"
                android:layout_height="17dp"
                app:srcCompat="@drawable/ic_calendar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="17dp">

            <TextView
                android:id="@+id/txtToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_to_date" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="31/12/2026" />

            <ImageView
                android:id="@+id/imgToDate"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_calendar" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_clear" />

        <ImageView
            android:id="@+id/imgFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_filter" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>